force-app/main/default/objects/RetailUnit__c/RetailUnit__c.object-meta.xml
<CustomObject>
    <description>Commercial retail unit within a Network Rail managed station.</description>
    <label>Retail Unit</label>
    <nameField>
        <label>Unit Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>