force-app/main/default/objects/RetailUnit__c/fields/AnnualRent__c.field-meta.xml
<CustomField>
    <fullName>AnnualRent__c</fullName>
    <label>Annual Rent (£)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>