force-app/main/default/objects/RetailUnit__c/fields/LeaseExpiry__c.field-meta.xml
<CustomField>
    <fullName>LeaseExpiry__c</fullName>
    <label>Lease Expiry</label>
    <type>Date</type>
</CustomField>