force-app/main/default/objects/RetailUnit__c/fields/SizesqFt__c.field-meta.xml
<CustomField>
    <fullName>SizesqFt__c</fullName>
    <label>Size (sq ft)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>