force-app/main/default/objects/RetailUnit__c/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <label>Station</label>
    <referenceTo>Station__c</referenceTo>
    <relationshipLabel>Retail Units</relationshipLabel>
    <relationshipName>RetailUnits</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>