force-app/main/default/objects/RetailUnit__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <label>Tenant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>