force-app/main/default/objects/RetailUnit__c/fields/UnitStatus__c.field-meta.xml
<CustomField>
    <fullName>UnitStatus__c</fullName>
    <label>Unit Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Occupied</fullName><default>true</default><label>Occupied</label></value>
            <value><fullName>Vacant</fullName><default>false</default><label>Vacant</label></value>
            <value><fullName>Under Refurbishment</fullName><default>false</default><label>Under Refurbishment</label></value>
            <value><fullName>Pending Handover</fullName><default>false</default><label>Pending Handover</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>