force-app/main/default/objects/RetailUnit__c/listViews/All_Retail_Units.listView-meta.xml
<ListView>
    <fullName>All_Retail_Units</fullName>
    <filterScope>Everything</filterScope>
    <label>All Retail Units</label>
    <columns>NAME</columns>
    <columns>Station__c</columns>
    <columns>Tenant__c</columns>
    <columns>UnitStatus__c</columns>
    <columns>SizesqFt__c</columns>
    <columns>AnnualRent__c</columns>
    <columns>LeaseExpiry__c</columns>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>